--- a/pkg/web/ng/intrasearch/angular.json
+++ b/pkg/web/ng/intrasearch/angular.json
@@ -51,7 +51,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -63,7 +69,8 @@
               "buildTarget": "intrasearch:build:production"
             },
             "development": {
-              "buildTarget": "intrasearch:build:development"
+              "buildTarget": "intrasearch:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
